add a class of map

--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="map.hpp" />
     <ClInclude Include="soldier.hpp" />
   </ItemGroup>
   <ItemGroup>
