--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="soldier.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="map.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="map.png">
