--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="shade.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ui.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="map.png">
