--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="shade.hpp" />
     <ClInclude Include="soldier.hpp" />
     <ClInclude Include="soldier_base.hpp" />
+    <ClInclude Include="state.hpp" />
     <ClInclude Include="ui.hpp" />
   </ItemGroup>
   <ItemGroup>
