--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="state.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="castle.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="map.png">
