--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="castle.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="getshade.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="map.png">
